095_bst_map/grade.txt
Grading at 11/08/2018:15:43:04.496203
For commit ID 785042b61f86f5985afa700c7b21b83d2f878f00
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = int; V = int]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = int; V = int]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = int; V = Tester]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = int; V = Tester]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = Tester; V = int]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = Tester; V = int]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::removehelper(BstMap<K, V>::BSTNode*, const K&) [with K = Tester; V = Tester]’:
bstmap.h:122:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
bstmap.h: In member function ‘BstMap<K, V>::BSTNode* BstMap<K, V>::addhelper(BstMap<K, V>::BSTNode*, const K&, const V&) [with K = Tester; V = Tester]’:
bstmap.h:67:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
